# infa

./: AGENTS.md  README.md
.agent/workflows/: style.md
.trae/documents/: Sửa lỗi Import_Export Dashboard.md
Docs/: CHANGELOG.md  INFOS.md  RULES.md  TASKS.md
backend/: Cargo.toml
backend/data/dashboards/: dash-10ca113d-f15c-4fdb-b92e-8706c91d30ae.json  dash-75910ff1-def1-4dc5-87f0-5efdfd74b178.json  dash-768a4fa7-cfef-46a1-8cb9-05f917694662.json
backend/migrations/: 0001_init.sql
backend/src/: main.rs
frontend/: README.md  angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.routes.ts  app.spec.ts  app.ts
frontend/src/app/layout/: layout.component.html  layout.component.scss  layout.component.ts
frontend/src/app/pages/architecture/: architecture.component.html  architecture.component.scss  architecture.component.scss.backup  architecture.component.spec.ts  architecture.component.ts  architecture.component_clean.scss
frontend/src/app/pages/jobs/: jobs.component.html  jobs.component.scss  jobs.component.ts
frontend/src/app/services/: dashboard.service.spec.ts  dashboard.service.ts
frontend/src/styles/: themes.scss
